# HUJI-67312-C-C-

./: README.md
EX1/: CMakeLists.txt  cipher.c  in.txt  main.c  out.txt  tests.c
EX2/: CMakeLists.txt  main.c  sort_bus_lines.c  sort_bus_lines.h  test_bus_lines.c  test_bus_lines.h
EX3/PART_A/: CMakeLists.txt  markov_chain.c  markov_chain.h  print_test.txt  test.txt  tweets_generator.c
EX3/PART_B/: CMakeLists.txt  linked_list.h  makefile  markov_chain.c  markov_chain.h  snakes_and_ladders.c  tweets_generator.c
EX4/: Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  main.cpp
EX5/: CMakeLists.txt  Movie.cpp  Movie.h  RecommendationSystem.cpp  RecommendationSystem.h  RecommendationSystemLoader.cpp  RecommendationSystemLoader.h  User.cpp  User.h  UsersLoader.cpp  UsersLoader.h  print_main.cpp
